--- a/_config.yml
+++ b/_config.yml
@@ -14,18 +14,18 @@ timezone: America/New_York
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Sohith Bandari # the main title
+title: Kushagra Yadav # the main title
 
-tagline: CS Grad @ NYU || ECE @ IIT-ISM  # it will display as the subtitle
+tagline: RA @ NYU | MSCS @ NYU | Ex-Pocketpills | DTU' 21  # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
-url: "https://billa-man.github.io"
+url: "https://kushagrayadv.github.io"
 
 github:
-  username: Billa-Man # change to your GitHub username
+  username: kushagrayadv # change to your GitHub username
 
 twitter:
   # username: twitter_username # change to your Twitter username
@@ -33,8 +33,8 @@ twitter:
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: Sohith Bandari
-  email: sohith.bandari@gmail.com # change to your email address
+  name: Kushagra Yadav
+  email: kushagra.yadav@nyu.edu # change to your email address
   links:
     # The first element serves as the copyright owner's link
     # - https://twitter.com/username # change to your Twitter homepage
