--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ timezone: America/New_York
 
 title: Kushagra Yadav # the main title
 
-tagline: RA @ NYU | MSCS @ NYU | Building Practical AI Solutions from Research to Deployment  # it will display as the subtitle
+tagline: RA @ NYU | MSCS @ NYU Building Practical AI Solutions from Research to Deployment  # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
 
